--- a/src/scss/pages/catalog.scss
+++ b/src/scss/pages/catalog.scss
@@ -4,4 +4,7 @@
     padding: var(--g-6) var(--g-4);
     border-radius: var(--br-4);
   }
+  .main-grid {
+    row-gap: var(--g-2);
+  }
 }
